tests/Checker/everything/errors/23a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *23: break must be in a while/for
Compilation was unsuccessful.
